# x-ray-image-enhancer

./: .gitignore  CMakeLists.txt  README.md
doc/: architecture.md  binning.md  use_cases.md
plan/: project.md
src/app/: CMakeLists.txt  imagefilterproxymodel.cpp  imagefilterproxymodel.h  imageitem.h  imagelistmodel.cpp  imagelistmodel.h  imageprovider.cpp  imageprovider.h  main.cpp  main.qml  mainmodel.cpp  mainmodel.h
src/imageprocessing/: CMakeLists.txt  binning.cpp  binning.h  imageenhancement.h
src/imagestoring/: CMakeLists.txt  imagereader.cpp  imagereader.h  imagereaderexception.h  imagewriter.cpp  imagewriter.h  imagewriterexception.h
src/imaging/: CMakeLists.txt  xrayimage.cpp  xrayimage.h
tests/: CMakeLists.txt  unittests.cpp
